Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33008

Spider 10.6+ fails to autodiscover structure (did in <=10.5) and reports ERROR 12500 (HY000): unknown

    XMLWordPrintable

Details

    Description

      10.5.23

      MariaDB [testdb]> CREATE TABLE data ENGINE=SPIDER  COMMENT='host "node1", user "monitor", password "password", port "3306"';
      Query OK, 0 rows affected (0.014 sec)
       
      MariaDB [testdb]> show create table data\G
      *************************** 1. row ***************************
             Table: data
      Create Table: CREATE TABLE `data` (
        `id` int(11) NOT NULL AUTO_INCREMENT,
        `code` varchar(10) DEFAULT NULL,
        PRIMARY KEY (`id`)
      ) ENGINE=SPIDER DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='host "node1", user "monitor", password "password", port "3306"'
      1 row in set (0.002 sec)
      

      10.6.16

      MariaDB [testdb]> CREATE TABLE data ENGINE=SPIDER  COMMENT='host "node1", user "monitor", password "password", port "3306"';
      ERROR 12500 (HY000): unknown
      

      Behaviour also exists in 10.11 using SERVERs;

      10.11.6

      MariaDB [testdb]> select * from mysql.servers;
      +-------------+-------+--------+----------+----------+------+--------+---------+-------+
      | Server_name | Host  | Db     | Username | Password | Port | Socket | Wrapper | Owner |
      +-------------+-------+--------+----------+----------+------+--------+---------+-------+
      | node1       | node1 | testdb | monitor  | password | 3306 |        | mariadb |       |
      +-------------+-------+--------+----------+----------+------+--------+---------+-------+
      1 row in set (0.001 sec)
       
      MariaDB [testdb]>   CREATE TABLE remote_node1 ENGINE=SPIDER REMOTE_SERVER="node1" REMOTE_TABLE="data"
          -> ;
      ERROR 12500 (HY000): unknown
      

      Attachments

        Activity

          People

            ycp Yuchen Pei
            danblack Daniel Black
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 5h 25m
                5h 25m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.