MDEV-33008 Fix spider table discovery

A new column was introduced to the show index output in 10.6 in
f691d9865becfd242ba44cc632034433336af1e7

Thus we update the check of the number of columns to be at least 13,
rather than exactly 13.

Also backport an err number and format from 10.5 for better error
messages when the column number is wrong.